add logic for switching buttons

--- a/app/views/lights/index.html.erb
+++ b/app/views/lights/index.html.erb
@@ -1,18 +1,16 @@
 <div class="container">
-
-Hello world
-<div class="test">
-</div>
-
-<div class="row">
-  <div class="question">
-    Do you like bananas?
+  <div class="row">
+    <div class="switch">
+      <input id="closet" class="cmn-toggle cmn-toggle-round" type="checkbox">
+      <label for="closet"></label>
+    </div>
+    <div class="switch">
+      <input id="picture" class="cmn-toggle cmn-toggle-round" type="checkbox">
+      <label for="picture"></label>
+    </div>
+    <div class="switch">
+      <input id="ambient" class="cmn-toggle cmn-toggle-round" type="checkbox">
+      <label for="ambient"></label>
+    </div>
   </div>
-  <div class="switch">
-    <input id="closet" class="cmn-toggle cmn-toggle-round" type="checkbox">
-    <label for="closet"></label>
-  </div>
-</div>
-
-
 </div>
